--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@
   --theme-color: #ff8585;
   --theme-bg-color: #ffe7e7;
   --alt-color: #d88a8a;
-  --alt-bg-color: #f4f0f0;
+  --alt-bg-color: #fff4f2;
   --dark-color: #282c34;
   --dark-grey-color: #d2d2d2;
   --light-grey-color: #eaeaea;
